[package]
name = "jsonWeb"
version = "0.1.0"
edition = "2021"



[dependencies]
reqwest = "0.11.23"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = { version = "1.0.111", features = ["default"] }
scraper = "0.18.1"
async-recursion = "1.0.5"
async-std = { version = "1.12.0", features = ["attributes"] }
ctrlc = "3.1.5"